[gd_scene load_steps=10 format=2]

[ext_resource path="res://Rooms/Pedestals/WeaponPedestal.gd" type="Script" id=1]
[ext_resource path="res://Assets/Meshes/WeaponMesh.tres" type="PrismMesh" id=2]
[ext_resource path="res://Assets/Audio/weapon-obtained.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Meshes/WeaponPedestal/weapon_pedestal_Cylinder.mesh" type="ArrayMesh" id=4]

[sub_resource type="ConvexPolygonShape" id=8]
points = PoolVector3Array( 6.8245, -0.97375, 1.55677, 4.56525, 0.97375, 1.0415, 3.66075, 0.97375, 2.92032, 5.47242, -0.97375, 4.36335, 6.8245, -0.97375, -1.55814, 4.56525, 0.97375, -1.04287, 2.03212, 0.97375, 4.21946, 3.03682, -0.97375, 6.30658, 5.47242, -0.97375, -4.36472, 3.66075, 0.97375, -2.92169, 0, 0.97375, 4.68265, 0, -0.97375, 7, 3.03682, -0.97375, -6.30795, 2.03212, 0.97375, -4.22083, -2.03345, 0.97375, 4.21946, -3.03816, -0.97375, 6.30658, 0, -0.97375, -7, 0, 0.97375, -4.68402, -3.66209, 0.97375, 2.92032, -5.47376, -0.97375, 4.36335, -3.03816, -0.97375, -6.30795, -2.03345, 0.97375, -4.22083, -4.56659, 0.97375, 1.0415, -6.8245, -0.97375, 1.55677, -5.47376, -0.97375, -4.36472, -3.66209, 0.97375, -2.92169, -4.56659, 0.97375, -1.04287, -6.8245, -0.97375, -1.55814 )

[sub_resource type="CylinderShape" id=5]
radius = 3.0
height = 4.0

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon/Model:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 3.55042, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapon/Model:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -17.789, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotation"
length = 6.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon/Model:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0125, 0.3625, 2.6625, 3.0125, 3.35, 5.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.05, 0 ), Vector3( 0, 0.85, 0 ), Vector3( 0, 0.9, 0 ), Vector3( 0, 0.85, 0 ), Vector3( 0, 0.05, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapon/Model:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 90, 0 ), Vector3( 0, 180, 0 ), Vector3( 0, 270, 0 ), Vector3( 0, 360, 0 ) ]
}

[sub_resource type="CylinderShape" id=7]
radius = 12.0
height = 16.0

[node name="WeaponPedestal" type="Spatial"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Pedestal" type="StaticBody" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Model" type="MeshInstance" parent="Pedestal"]
mesh = ExtResource( 4 )
skeleton = NodePath("../..")
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Pedestal"]
shape = SubResource( 8 )

[node name="Weapon" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Model" type="MeshInstance" parent="Weapon"]
transform = Transform( 1, 0, 0, 0, 0.952188, 0.305513, 0, -0.305513, 0.952188, 0, 3.55042, 0 )
mesh = ExtResource( 2 )
skeleton = NodePath("../..")
material/0 = null

[node name="PickupArea" type="Area" parent="Weapon"]
collision_layer = 0
collision_mask = 64
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Weapon/PickupArea"]
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Weapon"]
root_node = NodePath("../..")
anims/RESET = SubResource( 4 )
anims/rotation = SubResource( 3 )

[node name="DetailsArea" type="Area" parent="Weapon"]
collision_layer = 0
collision_mask = 64
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Weapon/DetailsArea"]
shape = SubResource( 7 )

[node name="Details" type="Control" parent="Weapon"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel" type="Panel" parent="Weapon/Details"]
margin_left = 30.0
margin_top = 30.0
margin_right = 410.0
margin_bottom = 215.0

[node name="Name" type="Label" parent="Weapon/Details/Panel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 360.0
text = "Object Name"

[node name="DamageLabel" type="Label" parent="Weapon/Details/Panel"]
margin_left = 20.0
margin_top = 60.0
margin_right = 76.0
text = "Damage:"

[node name="Damage" type="Label" parent="Weapon/Details/Panel"]
margin_left = 120.0
margin_top = 60.0
margin_right = 175.0
text = "0"

[node name="ShotsLabel" type="Label" parent="Weapon/Details/Panel"]
margin_left = 205.0
margin_top = 60.0
margin_right = 244.0
text = "Shots:"

[node name="Shots" type="Label" parent="Weapon/Details/Panel"]
margin_left = 305.0
margin_top = 60.0
margin_right = 360.0
margin_bottom = 74.0
text = "0"

[node name="Description" type="Label" parent="Weapon/Details/Panel"]
margin_left = 20.0
margin_top = 95.0
margin_right = 360.0
margin_bottom = 165.0
text = "Object description, this is an object description used to describe an object that can be picked by the player. Please, try to delete this text when starting the game."
align = 3
autowrap = true

[node name="WeaponPedestalAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
